--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,8 @@
+jdk:
+- openjdk17
+
+before install:
+- ./scripts/prepareJitpackEnvironment.sh
 install: 
-FILE="-Dfile=lib-exoplayer-release.aar" 
-mvn install:install-file $FILE -DgroupId=com.group.module -DartifactId=test -Dversion=1.0 -Dpackaging=aar -DpomFile=pom.xml
+- FILE="-Dfile=lib-exoplayer-release.aar" 
+mvn install:install-file $FILE -DgroupId=com.github.exoplayer -DartifactId=lib-exoplayer-release -Dversion=1.0 -Dpackaging=aar -DpomFile=pom.xml
