--- a/pom.yml
+++ b/pom.yml
@@ -3,14 +3,9 @@
      xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" 
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.group.module</groupId>
-  <artifactId>final</artifactId>
+  <groupId>com.github.ebrendonsantos</groupId>
+  <artifactId>exoplayer-release</artifactId>
   <version>1.0</version>
-  <dependencies>
-       <dependency>
-      <groupId>androidx.media3.exoplayer</groupId>
-      <artifactId>exoplayer</artifactId>
-      <version>1.1.1</version>
-    </dependency>
-  </dependencies>
+ <packaging>pom</packaging>
+<description>DESCRIPTION</description>
 </project>
