--- a/jitpack.yml
+++ b/jitpack.yml
@@ -5,4 +5,4 @@ before install:
 - ./scripts/prepareJitpackEnvironment.sh
 install: 
 - FILE="-Dfile=lib-exoplayer-release.aar" 
-mvn install:install-file $FILE -DgroupId=com.github.exoplayer -DartifactId=lib-exoplayer-release -Dversion=1.0 -Dpackaging=aar -DpomFile=pom.xml
+mvn install:install-file $FILE -DgroupId=com.github.ebrendonsantos -DartifactId=exoplayer -Dversion=1.0 -Dpackaging=aar -DpomFile=pom.xml
