--- a/pom.yml
+++ b/pom.yml
@@ -4,7 +4,7 @@
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.ebrendonsantos</groupId>
-  <artifactId>exoplayer-release</artifactId>
+  <artifactId>exoplayer</artifactId>
   <version>1.0</version>
  <packaging>pom</packaging>
 <description>DESCRIPTION</description>
